--- a/Book-api/Book-api.csproj
+++ b/Book-api/Book-api.csproj
@@ -1,9 +1,26 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	  <PropertyGroup>
 		    <TargetFramework>netcoreapp3.1</TargetFramework>
 		    <RootNamespace>Book_api</RootNamespace>
 	  </PropertyGroup>
+
+	  <ItemGroup>
+	    <Compile Remove="Migrations\20210829053932_Add-Migration.cs" />
+	    <Compile Remove="Migrations\20210829053932_Add-Migration.Designer.cs" />
+	  </ItemGroup>
+
+	  <ItemGroup>
+	    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.0" />
+	    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.0">
+	      <PrivateAssets>all</PrivateAssets>
+	      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	    </PackageReference>
+	  </ItemGroup>
+
+	  <ItemGroup>
+	    <Folder Include="Migrations\" />
+	  </ItemGroup>
 
 
 </Project>
